--- a/src/CSS/Domain.css
+++ b/src/CSS/Domain.css
@@ -510,7 +510,7 @@
 
 .live-domain-tech-text {
   font-size: 16px;
-  line-height: 1.1;
+  /* line-height: 1.1; */
   color: #444;
 }
 @media (max-width: 1024px) {
