--- a/src/CSS/Jobpostings.css
+++ b/src/CSS/Jobpostings.css
@@ -1,15 +1,9 @@
-/* ================================================= */
-/* ================= SECTION ======================== */
-/* ================================================= */
 
 section {
   width: 100%;
-  padding: 0 95px;
+  padding: 10px 20px;
 }
 
-/* ================================================= */
-/* ================= HEADER ========================= */
-/* ================================================= */
 
 .job-header {
     display: grid;
